dataset1235/2025-2/805158916/users/2802924318/executions/2118643220_971010696.log
== RUN (2025-09-01 14:48:01)
-- CODE: 
pesodosaco = float (input())
quantidade = float (input())
quantidadediária = pesodosaco - quantidade
print (round(quantidadediária,3))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2682.7
30.85
---- correct output:
2528.45
---- user output:
2651.85
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
899.783
---- user output:
980.223
-- TEST CASE 3:
---- input:
2345.6789
11.11
---- correct output:
2290.129
---- user output:
2334.569
-- TEST CASE 4:
---- input:
2045.2222
200.5
---- correct output:
1042.722
---- user output:
1844.722
-- TEST CASE 5:
---- input:
2771
85.8
---- correct output:
2342.0
---- user output:
2685.2
-- TEST CASE 6:
---- input:
12621
88.35
---- correct output:
12179.25
---- user output:
12532.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:02:23)
-- CODE: 
quantidade_diária= float(input())
consumo_diario= float(input())
consumo_total = consumo_diario * 5
restante = quantidade_diária - consumo_total
print (restante)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2682.7
30.85
---- correct output:
2528.45
---- user output:
2528.45
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
899.783
---- user output:
899.7833
-- TEST CASE 3:
---- input:
2345.6789
11.11
---- correct output:
2290.129
---- user output:
2290.1288999999997
-- TEST CASE 4:
---- input:
2045.2222
200.5
---- correct output:
1042.722
---- user output:
1042.7222
-- TEST CASE 5:
---- input:
2771
85.8
---- correct output:
2342.0
---- user output:
2342.0
-- TEST CASE 6:
---- input:
12621
88.35
---- correct output:
12179.25
---- user output:
12179.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:01:29)
-- CODE: 
quantidade_diária= float(input())
consumo_diario= float(input)))
consumo_total = consumo_diario * 5
restante = quantidade_diária - consumo_diario
print (restante)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2682.7
30.85
---- correct output:
2528.45
-- ERROR:
File "XXXX", line 2
    consumo_diario= float(input)))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
899.783
-- ERROR:
File "XXXX", line 2
    consumo_diario= float(input)))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
2345.6789
11.11
---- correct output:
2290.129
-- ERROR:
File "XXXX", line 2
    consumo_diario= float(input)))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
2045.2222
200.5
---- correct output:
1042.722
-- ERROR:
File "XXXX", line 2
    consumo_diario= float(input)))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
2771
85.8
---- correct output:
2342.0
-- ERROR:
File "XXXX", line 2
    consumo_diario= float(input)))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
12621
88.35
---- correct output:
12179.25
-- ERROR:
File "XXXX", line 2
    consumo_diario= float(input)))
                                ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:02:15)
-- CODE: 
quantidade_diária= float(input())
consumo_diario= float(input())
consumo_total = consumo_diario * 5
restante = quantidade_diária - consumo_total
print (restante)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2682.7
30.85
---- correct output:
2528.45
---- user output:
2528.45
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
899.783
---- user output:
899.7833
-- TEST CASE 3:
---- input:
2345.6789
11.11
---- correct output:
2290.129
---- user output:
2290.1288999999997
-- TEST CASE 4:
---- input:
2045.2222
200.5
---- correct output:
1042.722
---- user output:
1042.7222
-- TEST CASE 5:
---- input:
2771
85.8
---- correct output:
2342.0
---- user output:
2342.0
-- TEST CASE 6:
---- input:
12621
88.35
---- correct output:
12179.25
---- user output:
12179.25
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:06:04)
-- CODE: 
quantidade_ração= float(input())
consumo_diario= float(input())
consumo_total = consumo_diario * 5
restante = quantidade_ração - consumo_total
print (round(restante,3))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2682.7
30.85
---- correct output:
2528.45
---- user output:
2528.45
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
899.783
---- user output:
899.783
-- TEST CASE 3:
---- input:
2345.6789
11.11
---- correct output:
2290.129
---- user output:
2290.129
-- TEST CASE 4:
---- input:
2045.2222
200.5
---- correct output:
1042.722
---- user output:
1042.722
-- TEST CASE 5:
---- input:
2771
85.8
---- correct output:
2342.0
---- user output:
2342.0
-- TEST CASE 6:
---- input:
12621
88.35
---- correct output:
12179.25
---- user output:
12179.25
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:02:19)
-- CODE: 
quantidade_diária= float(input())
consumo_diario= float(input())
consumo_total = consumo_diario * 5
restante = quantidade_diária - consumo_total
print (restante)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2682.7
30.85
---- correct output:
2528.45
---- user output:
2528.45
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
899.783
---- user output:
899.7833
-- TEST CASE 3:
---- input:
2345.6789
11.11
---- correct output:
2290.129
---- user output:
2290.1288999999997
-- TEST CASE 4:
---- input:
2045.2222
200.5
---- correct output:
1042.722
---- user output:
1042.7222
-- TEST CASE 5:
---- input:
2771
85.8
---- correct output:
2342.0
---- user output:
2342.0
-- TEST CASE 6:
---- input:
12621
88.35
---- correct output:
12179.25
---- user output:
12179.25
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:48:00)
-- CODE: 
pesodosaco = float (input())
quantidade = float (input())
quantidadediária = pesodosaco - quantidade
print (round(quantidadediária,3))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2682.7
30.85
---- correct output:
2528.45
---- user output:
2651.85
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
899.783
---- user output:
980.223
-- TEST CASE 3:
---- input:
2345.6789
11.11
---- correct output:
2290.129
---- user output:
2334.569
-- TEST CASE 4:
---- input:
2045.2222
200.5
---- correct output:
1042.722
---- user output:
1844.722
-- TEST CASE 5:
---- input:
2771
85.8
---- correct output:
2342.0
---- user output:
2685.2
-- TEST CASE 6:
---- input:
12621
88.35
---- correct output:
12179.25
---- user output:
12532.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:03:47)
-- CODE: 
quantidade_diária= float(input())
consumo_diario= float(input())
restante = float(input())
consumo_total = consumo_diario * 5
restante = quantidade_diária - consumo_total
print (restante)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2682.7
30.85
---- correct output:
2528.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    restante = float(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
899.783
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    restante = float(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
2345.6789
11.11
---- correct output:
2290.129
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    restante = float(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
2045.2222
200.5
---- correct output:
1042.722
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    restante = float(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
2771
85.8
---- correct output:
2342.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    restante = float(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
12621
88.35
---- correct output:
12179.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    restante = float(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:00:55)
-- CODE: 
quantidade_diária= float(input())
consumo_diario= float(input))
consumo_total = consumo_diario * 5
restante = quantidade_diária - consumo_diario
print (restante)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2682.7
30.85
---- correct output:
2528.45
-- ERROR:
File "XXXX", line 2
    consumo_diario= float(input))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
899.783
-- ERROR:
File "XXXX", line 2
    consumo_diario= float(input))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
2345.6789
11.11
---- correct output:
2290.129
-- ERROR:
File "XXXX", line 2
    consumo_diario= float(input))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
2045.2222
200.5
---- correct output:
1042.722
-- ERROR:
File "XXXX", line 2
    consumo_diario= float(input))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
2771
85.8
---- correct output:
2342.0
-- ERROR:
File "XXXX", line 2
    consumo_diario= float(input))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
12621
88.35
---- correct output:
12179.25
-- ERROR:
File "XXXX", line 2
    consumo_diario= float(input))
                                ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:01:45)
-- CODE: 
quantidade_diária= float(input())
consumo_diario= float(input())
consumo_total = consumo_diario * 5
restante = quantidade_diária - consumo_diario
print (restante)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2682.7
30.85
---- correct output:
2528.45
---- user output:
2651.85
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
899.783
---- user output:
980.2233
-- TEST CASE 3:
---- input:
2345.6789
11.11
---- correct output:
2290.129
---- user output:
2334.5688999999998
-- TEST CASE 4:
---- input:
2045.2222
200.5
---- correct output:
1042.722
---- user output:
1844.7222
-- TEST CASE 5:
---- input:
2771
85.8
---- correct output:
2342.0
---- user output:
2685.2
-- TEST CASE 6:
---- input:
12621
88.35
---- correct output:
12179.25
---- user output:
12532.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:01:04)
-- CODE: 
quantidade_diária= float(input())
consumo_diario= float(input))
consumo_total = consumo_diario * 5
restante = quantidade_diária - consumo_diario
print (restante)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2682.7
30.85
---- correct output:
2528.45
-- ERROR:
File "XXXX", line 2
    consumo_diario= float(input))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
899.783
-- ERROR:
File "XXXX", line 2
    consumo_diario= float(input))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
2345.6789
11.11
---- correct output:
2290.129
-- ERROR:
File "XXXX", line 2
    consumo_diario= float(input))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
2045.2222
200.5
---- correct output:
1042.722
-- ERROR:
File "XXXX", line 2
    consumo_diario= float(input))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
2771
85.8
---- correct output:
2342.0
-- ERROR:
File "XXXX", line 2
    consumo_diario= float(input))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
12621
88.35
---- correct output:
12179.25
-- ERROR:
File "XXXX", line 2
    consumo_diario= float(input))
                                ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:45:49)
-- CODE: 
pesodosaco = float (input())
quantidade = float (input())
quantidadediária = pesodosaco - quantidade
print (round(quantidadediária,3))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2682.7
30.85
---- correct output:
2528.45
---- user output:
2651.85
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
899.783
---- user output:
980.223
-- TEST CASE 3:
---- input:
2345.6789
11.11
---- correct output:
2290.129
---- user output:
2334.569
-- TEST CASE 4:
---- input:
2045.2222
200.5
---- correct output:
1042.722
---- user output:
1844.722
-- TEST CASE 5:
---- input:
2771
85.8
---- correct output:
2342.0
---- user output:
2685.2
-- TEST CASE 6:
---- input:
12621
88.35
---- correct output:
12179.25
---- user output:
12532.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:38:34)
-- CODE: 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2682.7
30.85
---- correct output:
2528.45
---- user output:
None
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
899.783
---- user output:
None
-- TEST CASE 3:
---- input:
2345.6789
11.11
---- correct output:
2290.129
---- user output:
None
-- TEST CASE 4:
---- input:
2045.2222
200.5
---- correct output:
1042.722
---- user output:
None
-- TEST CASE 5:
---- input:
2771
85.8
---- correct output:
2342.0
---- user output:
None
-- TEST CASE 6:
---- input:
12621
88.35
---- correct output:
12179.25
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:46:08)
-- CODE: 
pesodosaco = float (input())
quantidade = float (input())
quantidadediária = pesodosaco - quantidade
print (round(quantidadediária,3))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2682.7
30.85
---- correct output:
2528.45
---- user output:
2651.85
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
899.783
---- user output:
980.223
-- TEST CASE 3:
---- input:
2345.6789
11.11
---- correct output:
2290.129
---- user output:
2334.569
-- TEST CASE 4:
---- input:
2045.2222
200.5
---- correct output:
1042.722
---- user output:
1844.722
-- TEST CASE 5:
---- input:
2771
85.8
---- correct output:
2342.0
---- user output:
2685.2
-- TEST CASE 6:
---- input:
12621
88.35
---- correct output:
12179.25
---- user output:
12532.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:49:11)
-- CODE: 
pesodosaco = float(input())
quantidade = float(input())
quantidadediária = pesodosaco - quantidade
print (round(quantidadediária,3))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2682.7
30.85
---- correct output:
2528.45
---- user output:
2651.85
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
899.783
---- user output:
980.223
-- TEST CASE 3:
---- input:
2345.6789
11.11
---- correct output:
2290.129
---- user output:
2334.569
-- TEST CASE 4:
---- input:
2045.2222
200.5
---- correct output:
1042.722
---- user output:
1844.722
-- TEST CASE 5:
---- input:
2771
85.8
---- correct output:
2342.0
---- user output:
2685.2
-- TEST CASE 6:
---- input:
12621
88.35
---- correct output:
12179.25
---- user output:
12532.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:04:50)
-- CODE: 
quantidade_ração= float(input())
consumo_diario= float(input())
consumo_total = consumo_diario * 5
restante = quantidade_ração - consumo_total
print (restante)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2682.7
30.85
---- correct output:
2528.45
---- user output:
2528.45
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
899.783
---- user output:
899.7833
-- TEST CASE 3:
---- input:
2345.6789
11.11
---- correct output:
2290.129
---- user output:
2290.1288999999997
-- TEST CASE 4:
---- input:
2045.2222
200.5
---- correct output:
1042.722
---- user output:
1042.7222
-- TEST CASE 5:
---- input:
2771
85.8
---- correct output:
2342.0
---- user output:
2342.0
-- TEST CASE 6:
---- input:
12621
88.35
---- correct output:
12179.25
---- user output:
12179.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:01:39)
-- CODE: 
quantidade_diária= float(input())
consumo_diario= float(input())
consumo_total = consumo_diario * 5
restante = quantidade_diária - consumo_diario
print (restante)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2682.7
30.85
---- correct output:
2528.45
---- user output:
2651.85
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
899.783
---- user output:
980.2233
-- TEST CASE 3:
---- input:
2345.6789
11.11
---- correct output:
2290.129
---- user output:
2334.5688999999998
-- TEST CASE 4:
---- input:
2045.2222
200.5
---- correct output:
1042.722
---- user output:
1844.7222
-- TEST CASE 5:
---- input:
2771
85.8
---- correct output:
2342.0
---- user output:
2685.2
-- TEST CASE 6:
---- input:
12621
88.35
---- correct output:
12179.25
---- user output:
12532.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:04:51)
-- CODE: 
quantidade_ração= float(input())
consumo_diario= float(input())
consumo_total = consumo_diario * 5
restante = quantidade_ração - consumo_total
print (restante)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2682.7
30.85
---- correct output:
2528.45
---- user output:
2528.45
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
899.783
---- user output:
899.7833
-- TEST CASE 3:
---- input:
2345.6789
11.11
---- correct output:
2290.129
---- user output:
2290.1288999999997
-- TEST CASE 4:
---- input:
2045.2222
200.5
---- correct output:
1042.722
---- user output:
1042.7222
-- TEST CASE 5:
---- input:
2771
85.8
---- correct output:
2342.0
---- user output:
2342.0
-- TEST CASE 6:
---- input:
12621
88.35
---- correct output:
12179.25
---- user output:
12179.25
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:03:51)
-- CODE: 
quantidade_diária= float(input())
consumo_diario= float(input())
restante = float(input())
consumo_total = consumo_diario * 5
restante = quantidade_diária - consumo_total
print (restante)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2682.7
30.85
---- correct output:
2528.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    restante = float(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
899.783
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    restante = float(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
2345.6789
11.11
---- correct output:
2290.129
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    restante = float(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
2045.2222
200.5
---- correct output:
1042.722
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    restante = float(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
2771
85.8
---- correct output:
2342.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    restante = float(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
12621
88.35
---- correct output:
12179.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    restante = float(input())
                     ^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:49:14)
-- CODE: 
pesodosaco = float(input())
quantidade = float(input())
quantidadediária = pesodosaco - quantidade
print (round(quantidadediária,3))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2682.7
30.85
---- correct output:
2528.45
---- user output:
2651.85
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
899.783
---- user output:
980.223
-- TEST CASE 3:
---- input:
2345.6789
11.11
---- correct output:
2290.129
---- user output:
2334.569
-- TEST CASE 4:
---- input:
2045.2222
200.5
---- correct output:
1042.722
---- user output:
1844.722
-- TEST CASE 5:
---- input:
2771
85.8
---- correct output:
2342.0
---- user output:
2685.2
-- TEST CASE 6:
---- input:
12621
88.35
---- correct output:
12179.25
---- user output:
12532.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:04:00)
-- CODE: 
quantidade_diária= float(input())
consumo_diario= float(input())
consumo_total = consumo_diario * 5
restante = quantidade_diária - consumo_total
print (restante)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2682.7
30.85
---- correct output:
2528.45
---- user output:
2528.45
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
899.783
---- user output:
899.7833
-- TEST CASE 3:
---- input:
2345.6789
11.11
---- correct output:
2290.129
---- user output:
2290.1288999999997
-- TEST CASE 4:
---- input:
2045.2222
200.5
---- correct output:
1042.722
---- user output:
1042.7222
-- TEST CASE 5:
---- input:
2771
85.8
---- correct output:
2342.0
---- user output:
2342.0
-- TEST CASE 6:
---- input:
12621
88.35
---- correct output:
12179.25
---- user output:
12179.25
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:05:56)
-- CODE: 
quantidade_ração= float(input())
consumo_diari o= float(input())
consumo_total = consumo_diario * 5
restante = quantidade_ração - consumo_total
print (round(restante,3))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2682.7
30.85
---- correct output:
2528.45
-- ERROR:
File "XXXX", line 2
    consumo_diari o= float(input())
                  ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
899.783
-- ERROR:
File "XXXX", line 2
    consumo_diari o= float(input())
                  ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
2345.6789
11.11
---- correct output:
2290.129
-- ERROR:
File "XXXX", line 2
    consumo_diari o= float(input())
                  ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2045.2222
200.5
---- correct output:
1042.722
-- ERROR:
File "XXXX", line 2
    consumo_diari o= float(input())
                  ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
2771
85.8
---- correct output:
2342.0
-- ERROR:
File "XXXX", line 2
    consumo_diari o= float(input())
                  ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
12621
88.35
---- correct output:
12179.25
-- ERROR:
File "XXXX", line 2
    consumo_diari o= float(input())
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:02:18)
-- CODE: 
quantidade_diária= float(input())
consumo_diario= float(input())
consumo_total = consumo_diario * 5
restante = quantidade_diária - consumo_total
print (restante)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2682.7
30.85
---- correct output:
2528.45
---- user output:
2528.45
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
899.783
---- user output:
899.7833
-- TEST CASE 3:
---- input:
2345.6789
11.11
---- correct output:
2290.129
---- user output:
2290.1288999999997
-- TEST CASE 4:
---- input:
2045.2222
200.5
---- correct output:
1042.722
---- user output:
1042.7222
-- TEST CASE 5:
---- input:
2771
85.8
---- correct output:
2342.0
---- user output:
2342.0
-- TEST CASE 6:
---- input:
12621
88.35
---- correct output:
12179.25
---- user output:
12179.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:49:11)
-- CODE: 
pesodosaco = float(input())
quantidade = float(input())
quantidadediária = pesodosaco - quantidade
print (round(quantidadediária,3))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2682.7
30.85
---- correct output:
2528.45
---- user output:
2651.85
-- TEST CASE 2:
---- input:
1000.3333
20.11
---- correct output:
899.783
---- user output:
980.223
-- TEST CASE 3:
---- input:
2345.6789
11.11
---- correct output:
2290.129
---- user output:
2334.569
-- TEST CASE 4:
---- input:
2045.2222
200.5
---- correct output:
1042.722
---- user output:
1844.722
-- TEST CASE 5:
---- input:
2771
85.8
---- correct output:
2342.0
---- user output:
2685.2
-- TEST CASE 6:
---- input:
12621
88.35
---- correct output:
12179.25
---- user output:
12532.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
